# transformers

./: README.md  RUST_CHAT_CLI_DESIGN.md  benchmark_doc_duplication.py  benchmark_doc_modification.py  benchmark_header_generation.py  benchmark_image_processing_auto.py  pyproject.toml
rust_crates/: Cargo.toml
rust_crates/tensor_ops_rs/: Cargo.toml
rust_crates/tensor_ops_rs/src/: lib.rs
rust_transformers_core/: Cargo.toml
rust_transformers_core/src/: activations.rs  attention.rs  attn_mask_utils.rs  main.rs  masking_utils.rs  rope_utils.rs
